Design: 리소스 추가

--- a/src/assets/scss/color/_red.scss
+++ b/src/assets/scss/color/_red.scss
@@ -10,3 +10,16 @@ $red700: #B42318;
 $red800: #912018;
 $red900: #7A271A;
 $red950: #55160C;
+
+$pink25: #FFF5F6;
+$pink50: #FFF1F3;
+$pink100: #FFE4E8;
+$pink200: #FECDD6;
+$pink300: #FEA3B4;
+$pink400: #FD6F8E;
+$pink500: #F63D68;
+$pink600: #E31B54;
+$pink700: #C01048;
+$pink800: #A11043;
+$pink900: #89123E;
+$pink950: #610824;
