--- a/src/assets/scss/mixins/_input.scss
+++ b/src/assets/scss/mixins/_input.scss
@@ -11,6 +11,7 @@
   border: 1px solid $border-color;
   border-radius: 5px;
   color: $text-color;
+  font-size: 14px;
   background-color: $background-color;
   box-sizing: border-box;
 
@@ -41,6 +42,7 @@
   border: 1px solid $border-color;
   border-radius: 5px;
   color: $text-color;
+  font-size: 14px;
   background-color: $background-color;
   box-sizing: border-box;
 
