Design: 폰트 원복, 라우터 링크 디자인 추가

--- a/src/assets/scss/mixins/_input.scss
+++ b/src/assets/scss/mixins/_input.scss
@@ -11,6 +11,7 @@
   border: 1px solid $border-color;
   border-radius: 5px;
   color: $text-color;
+  font-family: "Noto Sans KR", sans-serif;
   font-size: 14px;
   background-color: $background-color;
   box-sizing: border-box;
@@ -43,6 +44,7 @@
   border-radius: 5px;
   color: $text-color;
   font-size: 14px;
+  font-family: "Noto Sans KR", sans-serif;
   background-color: $background-color;
   box-sizing: border-box;
 
