Feat: 실시간 채팅 구현

--- a/src/assets/scss/mixins/_button.scss
+++ b/src/assets/scss/mixins/_button.scss
@@ -1,6 +1,6 @@
 
 @mixin custom-button(
-  $bg-color: #175CD3,
+  $bg-color: #1570EF,
   $text-color: #FFF,
   $hover-darken: 10%,
   $focus-darken: 15%,
