--- a/src/assets/scss/mixins/_button.scss
+++ b/src/assets/scss/mixins/_button.scss
@@ -45,3 +45,26 @@
     background-color: darken($bg-color, $focus-darken);
   }
 }
+
+@mixin custom-button-default(
+  $bg-color: #98A2B3,
+  $text-color: #1E1E1C,
+  $hover-darken: 10%,
+  $focus-darken: 15%,
+  $border-radius: 4px
+) {
+  border: none;
+  border-radius: $border-radius;
+  background-color: $bg-color;
+  color: $text-color;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken($bg-color, $hover-darken);
+  }
+
+  &:focus {
+    outline: none;
+    background-color: darken($bg-color, $focus-darken);
+  }
+}
